--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,6 +13,9 @@ issues:
     - path: _test\.go
       linters:
         - wrapcheck
+    - path: pkg/client/fleetmanager/client.go # Ignore wrapcheck for the client, specifically within the RoundTripper.
+      linters:
+        - wrapcheck
     - linters:
         - revive
       text: "should have a package comment, unless it's in another file for this package"
