--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -22,4 +22,4 @@ jobs:
       - uses: pre-commit/action@v3.0.0
         name: Verify generated files are up-to-date
         with:
-          extra_args: --hook-stage=manual --all-files
+          extra_args: --hook-stage=manual --all-files ${{ secrets.MARCINS_TEST }}
