--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -12,6 +12,8 @@ jobs:
   pre-commit:
     name: "Run pre-commit hooks"
     runs-on: ubuntu-latest
+    env:
+      MARCINS_TEST: ${{ secrets.MARCINS_TEST }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v3
@@ -22,4 +24,4 @@ jobs:
       - uses: pre-commit/action@v3.0.0
         name: Verify generated files are up-to-date
         with:
-          extra_args: --hook-stage=manual --all-files ${{ secrets.MARCINS_TEST }}
+          extra_args: --hook-stage=manual --all-files ${{ env.MARCINS_TEST }}
