--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -12,6 +12,7 @@ jobs:
   pre-commit:
     name: "Run pre-commit hooks"
     runs-on: ubuntu-latest
+    environment: porridge-test
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v3
