Add secret for data plane monitoring dead man's switch
The URLs for stage and prod are set to checks on healthchecks.io, which
is used as the dead man's switch provider.

--- a/dp-terraform/helm/rhacs-terraform/charts/observability/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/values.yaml
@@ -27,3 +27,7 @@ observatorium:
 pagerduty:
   # PagerDuty integration key, which is generated within a Ruleset.
   key: ""
+
+deadMansSwitch:
+  # Webhook URL of the dead man's switch provider.
+  url: ""
