ROX-13018: Load secrets from Parameter Store

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -10,7 +10,7 @@ export CLUSTER_ID_DEFAULT="1234567890abcdef1234567890abcdef"
 export CLUSTER_DNS_DEFAULT="cluster.local"
 
 export IMAGE_REGISTRY_DEFAULT="quay.io/rhacs-eng"
-STACKROX_VERSION_TAG="3.72.0-nightly-20220929"
+STACKROX_VERSION_TAG="3.72.0"
 export STACKROX_OPERATOR_VERSION_DEFAULT="${STACKROX_VERSION_TAG}"
 export CENTRAL_VERSION_DEFAULT=$(echo "$STACKROX_VERSION_TAG" | sed -e 's/0-nightly/x-nightly/;')
 export SCANNER_VERSION_DEFAULT="2.25.1" # This one matches the above operator version tag.
@@ -29,7 +29,7 @@ export DATABASE_USER_DEFAULT="fleet_manager"
 export DATABASE_PASSWORD_DEFAULT="letmein" # pragma: allowlist secret
 export DATABASE_TLS_CERT_DEFAULT=""
 
-export AUTH_TYPE_DEFAULT="STATIC_TOKEN"
+export AUTH_TYPE_DEFAULT="RHSSO"
 export OCM_SERVICE_CLIENT_ID_DEFAULT=""
 export OCM_SERVICE_CLIENT_SECRET_DEFAULT=""
 export OCM_SERVICE_TOKEN_DEFAULT=""
@@ -59,3 +59,6 @@ export FLEET_MANAGER_RESOURCES_DEFAULT='{"requests":{"cpu":"200m","memory":"300M
 export FLEETSHARD_SYNC_RESOURCES_DEFAULT='{"requests":{"cpu":"200m","memory":"300Mi"},"limits":{"cpu":"200m","memory":"300Mi"}}'
 export DB_RESOURCES_DEFAULT='{"requests":{"cpu":"100m","memory":"300Mi"},"limits":{"cpu":"100m","memory":"300Mi"}}'
 export RHACS_OPERATOR_RESOURCES_DEFAULTS='{"requests":{"cpu":"200m","memory":"300Mi"},"limits":{"cpu":"200m","memory":"300Mi"}}'
+
+export ENABLE_EXTERNAL_CONFIG_DEFAULT=false
+export CHAMBER_DEFAULT=chamber
