Make removal optional based on static vs dynamic config

--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -254,6 +254,8 @@ components:
                       type: string
                     clientId:
                       type: string
+                    clientOrigin:
+                      type: string
                     ownerUserId:
                       type: string
                     ownerOrgId:
@@ -480,8 +482,10 @@ components:
           auth:
             clientSecret: ""
             clientId: "client-id"
+            clientOrigin: "shared_static_rhsso"
             ownerUserId: "f:ac4bcdb5-1fb1-41c5-9323-349698b9b757:username"
             orgId: "13442309"
+            issuer: "https://sso.stage.redhat.com/auth/realms/redhat-external"
           endpoint:
             host: "example-central--rfpsqbvq-em-u-u-z--ymjcwac.example.central.com"
             tls:
