Fix labelSelector formatting

--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -895,7 +895,7 @@ objects:
           affinity:
             podAntiAffinity:
               preferredDuringSchedulingIgnoredDuringExecution:
-                labelSelector:
+              - labelSelector:
                   matchExpressions:
                   - key: app
                     operator: In
