Use IfNotPresent imagePullPolicy for fleetshard-sync.

--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
       - name: fleetshard-sync
         image: {{ .Values.fleetshardSync.image | quote }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
         - /usr/local/bin/fleetshard-sync
         env:
