--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -64,4 +64,4 @@ export RHACS_OPERATOR_RESOURCES_DEFAULTS='{"requests":{"cpu":"200m","memory":"30
 export ENABLE_EXTERNAL_CONFIG_DEFAULT=false
 export USE_AWS_VAULT_DEFAULT=false
 export AWS_VAULT_PROFILE_DEFAULT=dev
-export AWS_REGION="us-east-1"
+export AWS_REGION_DEFAULT="us-east-1"
