X-Smart-Squash: Squashed 13 commits:
d31fbe99 Implement IGNORE_REPOSITORY_DIRTINESS for quicker feedback cycles when it is not desired to build new images
718193ba Add --slow-spec-threshold flag to the ginkgo invocation to reduce noise during test execution
4c264459 Reducing noise level when Route53 creds are not set
11795ae7 Improve human-readable output during deployment
247e25ff Factor out tear down of tenant namespaces so that the function can also be called from the commandline in isolation
584d9ebc Ginkgo verbose mode
1a85d9d5 WIP
6f240b00 Fix test
13e4759d New Makefile target test/e2e/reset, modified test/e2e/cleanup
95fbd587 Delete tenant CRs before deleting tenant namespaces
73ef0775 New script for quicker feedback cycles when e2e testing
055401b1 Fix test
bee27e3a Polishing

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -10,12 +10,13 @@ export CLUSTER_ID_DEFAULT="1234567890abcdef1234567890abcdef"
 export CLUSTER_DNS_DEFAULT="cluster.local"
 
 export IMAGE_REGISTRY_DEFAULT="quay.io/rhacs-eng"
-STACKROX_VERSION_TAG="3.72.0"
+STACKROX_VERSION_TAG="3.72.0" # Note: SCANNER_VERSION_DEFAULT needs to be in sync with this.
 export STACKROX_OPERATOR_VERSION_DEFAULT="${STACKROX_VERSION_TAG}"
 export CENTRAL_VERSION_DEFAULT=$(echo "$STACKROX_VERSION_TAG" | sed -e 's/0-nightly/x-nightly/;')
-export SCANNER_VERSION_DEFAULT="2.25.1" # This one matches the above operator version tag.
+export SCANNER_VERSION_DEFAULT="2.26.0" # This one matches the above operator version tag.
 export STACKROX_OPERATOR_NAMESPACE_DEFAULT="stackrox-operator"
-export FLEET_MANAGER_IMAGE_DEFAULT="fleet-manager:$(make -s -C "$GITROOT" tag)"
+export FLEET_MANAGER_IMAGE_DEFAULT=""
+export IGNORE_REPOSITORY_DIRTINESS_DEFAULT="false"
 export ENABLE_DB_PORT_FORWARDING_DEFAULT="false"
 export ENABLE_FM_PORT_FORWARDING_DEFAULT="false"
 export OPENSHIFT_MARKETPLACE_DEFAULT="false"
