--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -22,6 +22,7 @@ export ENABLE_FM_PORT_FORWARDING_DEFAULT="false"
 export OPENSHIFT_MARKETPLACE_DEFAULT="false"
 export INSTALL_OPERATOR_DEFAULT="true"
 export INSTALL_OPENSHIFT_ROUTER_DEFAULT="true"
+export DEBUG_PODS_DEFAULT="false"
 
 export DATABASE_HOST_DEFAULT="db"
 export DATABASE_PORT_DEFAULT="5432"
