--- a/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
+++ b/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
@@ -32,9 +32,9 @@ spec:
               name: config
       containers:
         - command:
-            - sh
-            - "-c"
-            - "cd /; /usr/local/bin/fleet-manager serve --force-leader --api-server-bindaddress=0.0.0.0:8000 --health-check-server-bindaddress=0.0.0.0:8083 --kubeconfig=/secrets/kubeconfig --enable-central-external-certificate=$ENABLE_CENTRAL_EXTERNAL_CERTIFICATE --central-domain-name='$CENTRAL_DOMAIN_NAME' || { sleep 120; false; }"
+          - "sh"
+          - "-c"
+          - "$FLEET_MANAGER_CONTAINER_COMMAND"
           image: "$FLEET_MANAGER_IMAGE"
           imagePullPolicy: IfNotPresent
           name: fleet-manager
