Support using RHACS operator from Quay also when deploying to OpenShift.

--- a/dev/env/defaults/10-operator-source.env
+++ b/dev/env/defaults/10-operator-source.env
@@ -1,6 +1,10 @@
 # shellcheck shell=bash
 
-if [[ "${CLUSTER_TYPE:-}" != "openshift" && "${INSTALL_OPERATOR:-$INSTALL_OPERATOR_DEFAULT}" == "true" ]]; then
+if is_openshift_cluster "${CLUSTER_TYPE:-}"; then
+    export OPERATOR_SOURCE_DEFAULT="marketplace"
+else
     export OPERATOR_SOURCE_DEFAULT="quay"
-    export INSTALL_OLM_DEFAULT="true"
+    if [[ "${INSTALL_OPERATOR:-$INSTALL_OPERATOR_DEFAULT}" == "true" ]]; then
+        export INSTALL_OLM_DEFAULT="true"
+    fi
 fi
