--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -62,4 +62,4 @@ export DB_RESOURCES_DEFAULT='{"requests":{"cpu":"100m","memory":"300Mi"},"limits
 export RHACS_OPERATOR_RESOURCES_DEFAULTS='{"requests":{"cpu":"200m","memory":"300Mi"},"limits":{"cpu":"200m","memory":"300Mi"}}'
 
 export ENABLE_EXTERNAL_CONFIG_DEFAULT=false
-export CHAMBER_DEFAULT=chamber
+export USE_AWS_VAULT_DEFAULT=false
