--- a/probe/Dockerfile
+++ b/probe/Dockerfile
@@ -4,10 +4,12 @@ COPY bin/probe /stackrox/
 
 EXPOSE 7070
 
-CMD ["/stackrox/probe", "start"]
+ENTRYPOINT ["/stackrox/probe"]
+
+CMD ["start"]
 
 LABEL name="probe" \
-    vendor="Red Hat" \
-    version="0.0.1" \
-    summary="Blackbox monitoring probe for ACS Fleet Manager" \
-    description="Blackbox monitoring probe for the Red Hat Advanced Cluster Security Fleet Manager"
+	vendor="Red Hat" \
+	version="0.0.1" \
+	summary="Blackbox monitoring probe for ACS Fleet Manager" \
+	description="Blackbox monitoring probe for the Red Hat Advanced Cluster Security Fleet Manager"
