Support deploying Operator from Quay on remote OpenShift Cluster (#511)
Support using RHACS operator from Quay also when deploying to OpenShift.

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -49,7 +49,7 @@ export OBSERVABILITY_CONFIG_ACCESS_TOKEN_DEFAULT=""
 export IMAGE_PULL_DOCKER_CONFIG_DEFAULT=""
 export SPAWN_LOGGER_DEFAULT="false"
 export DUMP_LOGS_DEFAULT="false"
-export OPERATOR_SOURCE_DEFAULT="quay"
+export OPERATOR_SOURCE_DEFAULT=""
 export INSTALL_OLM_DEFAULT="true"
 export FINAL_TEAR_DOWN_DEFAULT="false"
 export DOCKER_CONFIG_DEFAULT="${GITROOT}/.docker"
