ROX-12990: Configure default Central resources (#472)
Configure default resources for newly created tenants within app-interface service template.

--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -366,7 +366,7 @@ parameters:
 
 - name: IMAGE_PULL_POLICY
   displayName: image pull policy
-  description: image pull polilcy
+  description: image pull policy
   value: "IfNotPresent"
 
 - name: TOKEN_ISSUER_URL
@@ -383,6 +383,66 @@ parameters:
   displayName: SupportedProviders configuration file
   description: SupportedProviders configuration file, that it's passed to the fleet manager executable in the flag --providers-config-file
   value: /config/provider-configuration.yaml
+
+- name: CENTRAL_CPU_REQUEST
+  displayName: Default Central CPU request
+  description: Default CPU request for central deployments for newly created tenants
+  value: "50m"
+
+- name: CENTRAL_MEMORY_REQUEST
+  displayName: Default Central memory request
+  description: Default memory request for central deployments for newly created tenants
+  value: "250Mi"
+
+- name: CENTRAL_CPU_LIMIT
+  displayName: Default Central CPU limit
+  description: Default CPU limit for central deployments for newly created tenants
+  value: "250m"
+
+- name: CENTRAL_MEMORY_LIMIT
+  displayName: Default Central memory limit
+  description: Default memory limit for central deployments for newly created tenants
+  value: "4G"
+
+- name: SCANNER_ANALYZER_CPU_REQUEST
+  displayName: Default Scanner CPU request
+  description: Default CPU request for scanner deployments for newly created tenants
+  value: "5m"
+
+- name: SCANNER_ANALYZER_MEMORY_REQUEST
+  displayName: Default Scanner memory request
+  description: Default memory request for scanner deployments for newly created tenants
+  value: "100M"
+
+- name: SCANNER_ANALYZER_CPU_LIMIT
+  displayName: Default Scanner CPU limit
+  description: Default CPU limit for scanner deployments for newly created tenants
+  value: "250m"
+
+- name: SCANNER_ANALYZER_MEMORY_LIMIT
+  displayName: Default Scanner memory limit
+  description: Default memory limit for scanner deployments for newly created tenants
+  value: "2500M"
+
+- name: SCANNER_DB_CPU_REQUEST
+  displayName: Default Scanner DB CPU request
+  description: Default CPU request for scanner-db deployments for newly created tenants
+  value: "10m"
+
+- name: SCANNER_DB_MEMORY_REQUEST
+  displayName: Default Scanner DB memory request
+  description: Default memory request for scanner-db deployments for newly created tenants
+  value: "500M"
+
+- name: SCANNER_DB_CPU_LIMIT
+  displayName: Default Scanner DB CPU limit
+  description: Default CPU limit for scanner-db deployments for newly created tenants
+  value: "250m"
+
+- name: SCANNER_DB_MEMORY_LIMIT
+  displayName: Default Scanner DB memory limit
+  description: Default memory limit for scanner-db deployments for newly created tenants
+  value: "2500M"
 
 objects:
   - kind: ConfigMap
@@ -1050,6 +1110,33 @@ objects:
             env:
               - name: "OCM_ENV"
                 value: "${ENVIRONMENT}"
+
+              - name: CENTRAL_CPU_REQUEST
+                value: "${CENTRAL_CPU_REQUEST}"
+              - name: CENTRAL_MEMORY_REQUEST
+                value: "${CENTRAL_MEMORY_REQUEST}"
+              - name: CENTRAL_CPU_LIMIT
+                value: "${CENTRAL_CPU_LIMIT}"
+              - name: CENTRAL_MEMORY_LIMIT
+                value: "${CENTRAL_MEMORY_LIMIT}"
+
+              - name: SCANNER_ANALYZER_CPU_REQUEST
+                value: "${SCANNER_ANALYZER_CPU_REQUEST}"
+              - name: SCANNER_ANALYZER_MEMORY_REQUEST
+                value: "${SCANNER_ANALYZER_MEMORY_REQUEST}"
+              - name: SCANNER_ANALYZER_CPU_LIMIT
+                value: "${SCANNER_ANALYZER_CPU_LIMIT}"
+              - name: SCANNER_ANALYZER_MEMORY_LIMIT
+                value: "${SCANNER_ANALYZER_MEMORY_LIMIT}"
+
+              - name: SCANNER_DB_CPU_REQUEST
+                value: "${SCANNER_DB_CPU_REQUEST}"
+              - name: SCANNER_DB_MEMORY_REQUEST
+                value: "${SCANNER_DB_MEMORY_REQUEST}"
+              - name: SCANNER_DB_CPU_LIMIT
+                value: "${SCANNER_DB_CPU_LIMIT}"
+              - name: SCANNER_DB_MEMORY_LIMIT
+                value: "${SCANNER_DB_MEMORY_LIMIT}"
             command:
             - /usr/local/bin/fleet-manager
             - serve
