--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -112,6 +112,10 @@ jobs:
           QUAY_USER: ${{ secrets.QUAY_RHACS_ENG_FM_RW_USERNAME }}
           QUAY_TOKEN: ${{ secrets.QUAY_RHACS_ENG_FM_RW_PASSWORD }}
           QUAY_IMAGE_REPOSITORY: rhacs-eng/fleet-manager
+
+          PROBE_QUAY_USER: ${{ secrets.QUAY_RHACS_ENG_PROBE_RW_USERNAME }}
+          PROBE_QUAY_TOKEN: ${{ secrets.QUAY_RHACS_ENG_PROBE_RW_PASSWORD }}
+          QUAY_PROBE_IMAGE_REPOSITORY: rhacs-eng/blackbox-monitoring-probe-service
         run: |
           chmod +x ./build_deploy.sh
           ./build_deploy.sh
