ROX-12076: helm chart for probe service [7]

--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -57,3 +57,12 @@ logging:
   aws:
     accessKeyId: ""
     secretAccessKey: ""
+
+# See available parameters in charts/probe/values.yaml
+# - enabled flag is used to completely enable/disable logging sub-chart
+probe:
+  enabled: false
+  fleetManagerEndpoint: ""
+  redHatSSO:
+    clientId: ""
+    clientSecret: ""
