Add probe directory to depenabot config

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -17,3 +17,7 @@ updates:
     directory: "/docker"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "docker"
+    directory: "/probe"
+    schedule:
+      interval: "weekly"
