--- a/dev/env/manifests/crds/01-platform.stackrox.io_centrals.yaml
+++ b/dev/env/manifests/crds/01-platform.stackrox.io_centrals.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.10.0
   creationTimestamp: null
   name: centrals.platform.stackrox.io
 spec:
@@ -59,7 +59,7 @@ spec:
                         - name
                       type: object
                     db:
-                      description: 'NOTE: Central DB is in technical preview. Settings
+                      description: 'NOTE: Central DB is in Technology Preview. Settings
                       for Central DB, which is responsible for data persistence.'
                       properties:
                         connectionString:
@@ -68,6 +68,16 @@ spec:
                             Central DB. When using this option, you must explicitly
                             set a password secret; automatically generating a password
                             will not be supported.
+                          type: string
+                        isEnabled:
+                          default: Default
+                          description: Specify whether central-db is enabled, Default
+                            configures central to use rocksdb. If IsEnabled the operator
+                            will provision the Central DB or use an external DB if a
+                            connection string is provided.
+                          enum:
+                            - Default
+                            - Enabled
                           type: string
                         nodeSelector:
                           additionalProperties:
@@ -449,6 +459,7 @@ spec:
                                 required:
                                   - key
                                 type: object
+                                x-kubernetes-map-type: atomic
                               fieldRef:
                                 description: 'Selects a field of the pod: supports metadata.name,
                                 metadata.namespace, `metadata.labels[''<KEY>'']`,
@@ -467,6 +478,7 @@ spec:
                                 required:
                                   - fieldPath
                                 type: object
+                                x-kubernetes-map-type: atomic
                               resourceFieldRef:
                                 description: 'Selects a resource of the container: only
                                 resources limits and requests (limits.cpu, limits.memory,
@@ -491,6 +503,7 @@ spec:
                                 required:
                                   - resource
                                 type: object
+                                x-kubernetes-map-type: atomic
                               secretKeyRef:
                                 description: Selects a key of a secret in the pod's
                                   namespace
@@ -511,6 +524,7 @@ spec:
                                 required:
                                   - key
                                 type: object
+                                x-kubernetes-map-type: atomic
                             type: object
                         required:
                           - name
@@ -879,5 +893,5 @@ status:
   acceptedNames:
     kind: ""
     plural: ""
-  conditions: []
-  storedVersions: []
+  conditions: null
+  storedVersions: null
