--- a/deploy/helm/probe/templates/01-operator-03-deployment.yaml
+++ b/deploy/helm/probe/templates/01-operator-03-deployment.yaml
@@ -38,3 +38,4 @@ spec:
           ports:
             - name: monitoring
               containerPort: 7070
+      terminationGracePeriodSeconds: 900
