--- a/deploy/helm/probe/templates/01-operator-02-secret-rhsso-client-secret.yaml
+++ b/deploy/helm/probe/templates/01-operator-02-secret-rhsso-client-secret.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.authType "RHSSO" }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,3 +7,4 @@ metadata:
 stringData:
   CLIENT_SECRET: {{ .Values.redHatSSO.clientSecret | quote }}
 type: Opaque
+{{- end }}
