reduce cleanup timeout to 5 min

--- a/deploy/helm/probe/templates/01-operator-03-deployment.yaml
+++ b/deploy/helm/probe/templates/01-operator-03-deployment.yaml
@@ -50,3 +50,4 @@ spec:
           ports:
             - name: monitoring
               containerPort: 7070
+      terminationGracePeriodSeconds: 300
