ROX-12076: OCM auth [8] (#582)
* add ocm auth type

* add ocm to helm

* reduce cleanup timeout to 5 min

* do not ensure deprovision

* if -> switch

* create auth from env

* log request status in delete

* add comments

--- a/deploy/helm/probe/values.yaml
+++ b/deploy/helm/probe/values.yaml
@@ -1,6 +1,13 @@
 image: "quay.io/rhacs-eng/blackbox-monitoring-probe-service:main"
 namespace: "rhacs-probe"
 fleetManagerEndpoint: ""
+# Must be either 'RHSSO' or 'OCM'.
+authType: "RHSSO"
+ocm:
+  # The username of the Red Hat SSO account.
+  username: ""
+  # The refresh token obtained from `ocm token --refresh`.
+  token: ""
 redHatSSO:
   clientId: ""
   clientSecret: ""
