--- a/deploy/helm/probe/templates/01-operator-03-deployment.yaml
+++ b/deploy/helm/probe/templates/01-operator-03-deployment.yaml
@@ -24,6 +24,9 @@ spec:
           env:
             - name: FLEET_MANAGER_ENDPOINT
               value: {{ .Values.fleetManagerEndpoint | quote }}
+            - name: AUTH_TYPE
+              value: {{ .Values.authType | quote }}
+            {{- if eq .Values.authType "RHSSO" }}
             - name: RHSSO_SERVICE_ACCOUNT_CLIENT_ID
               value: {{ .Values.redHatSSO.clientId | quote  }}
             - name: RHSSO_SERVICE_ACCOUNT_CLIENT_SECRET
@@ -35,6 +38,16 @@ spec:
               value: {{ .Values.redHatSSO.endpoint | quote  }}
             - name: RHSSO_REALM
               value: {{ .Values.redHatSSO.realm | quote  }}
+            {{- else if eq .Values.authType "OCM" }}
+            - name: OCM_USERNAME
+              value: {{ .Values.ocm.username | quote  }}
+            - name: OCM_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: rhacs-probe-ocm-token
+                  key: TOKEN
+            {{- end }}
           ports:
             - name: monitoring
               containerPort: 7070
+      terminationGracePeriodSeconds: 300
