ROX-12076: Add continuous deployment for probe

--- a/deploy/helm/probe/templates/01-operator-04-deployment.yaml
+++ b/deploy/helm/probe/templates/01-operator-04-deployment.yaml
@@ -17,6 +17,7 @@ spec:
       labels:
         app: probe
     spec:
+      serviceAccountName: probe
       containers:
         - name: probe
           image: {{ .Values.image | quote }}
